--- a/epf-front-skeleton-main/src/app/home/home.component.html
+++ b/epf-front-skeleton-main/src/app/home/home.component.html
@@ -1,32 +1,45 @@
-<div class="left">
-  <span class="title">Bonjour à toi jeune Peufien !</span>
-  <p>Nous sommes heureux de t'accueillir pour ce cours de Java Spring Angular !
-    <img src="assets/soleil.gif" class="sun">
-  </p>
-  <span class="title">Comment se passe ce cours : </span>
+<div class="center">
+  <span class="title">Bienvenu sur notre site de QUIZZZZZ !</span>
   <div class="card-group">
     <div class="card">
-      <img class="card-img-top" src="assets/img1.png" alt="Card image cap">
+      <img class="card-img-top" src="assets/logo_quizz.jpg">
       <div class="card-body">
-        <p class="card-text">Tu réalises un projet from scratch</p>
+        <p class="card-text">Quizz 1</p>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="assets/img2.png" alt="Card image cap">
+      <img class="card-img-top" src="assets/logo_quizz.jpg">
       <div class="card-body">
-        <p class="card-text">Tu as un max de fun en travaillant en équipe!</p>
+        <p class="card-text">Quizz 2</p>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="assets/img3.png" alt="Card image cap">
+      <img class="card-img-top" src="assets/logo_quizz.jpg">
       <div class="card-body">
-        <p class="card-text">Tes profs sont prêts à voler à ton secours à tout moment !</p>
+        <p class="card-text">Quizz 3</p>
+      </div>
+    </div>
+  </div>
+  <div class="card-group">
+    <div class="card">
+      <img class="card-img-top" src="assets/logo_quizz.jpg">
+      <div class="card-body">
+        <p class="card-text">Quizz 1</p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="assets/logo_quizz.jpg">
+      <div class="card-body">
+        <p class="card-text">Quizz 2</p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="assets/logo_quizz.jpg">
+      <div class="card-body">
+        <p class="card-text">Quizz 3</p>
       </div>
     </div>
   </div>
   <p>Nous sommes là pour t'aider et t'accompagner pendant 4 journées de TP. N'hésite pas si tu as la moindre question
     ! </p>
-</div>
-<div class="right">
-  <img src="assets/homepage-cat.png">
 </div>
